--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "prepublishOnly": "npm run build:prod"
   },
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/desertlionio/sdk"
+  },
   "author": {
     "name": "Desert Lion Team",
     "email": "team@desertlion.io",
