--- a/package.json
+++ b/package.json
@@ -41,12 +41,11 @@
     "debugger",
     "debug"
   ],
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "css-selector-generator": "^3.6.1",
     "error-stack-parser": "^2.1.4",
-    "rrweb": "1.1.3"
-  },
-  "devDependencies": {
+    "rrweb": "1.1.3",
     "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
     "@rollup/plugin-commonjs": "^23.0.2",
