--- a/package.json
+++ b/package.json
@@ -41,9 +41,10 @@
     "debugger",
     "debug"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "css-selector-generator": "^3.6.1"
+  },
   "devDependencies": {
-    "css-selector-generator": "^3.6.1",
     "error-stack-parser": "^2.1.4",
     "rrweb": "1.1.3",
     "@babel/core": "^7.18.5",
